2008-01-27  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/fortran.lang: highlight floating
	point constants properly; highlight BOZ literals (#496781).
	* gtksourceview/language-specs/makefile.lang: escaped quote does
	not start a string.
	* gtksourceview/language-specs/sh.lang: def:escape is wrong in
	shell strings; highlight $! (Luca Cavalli, #512141).
	* gtksourceview/language-specs/lua.lang: properly highlight escaped
	characters in strings.
	* gtksourceview/language-specs/forth.lang: updated.
	* gtksourceview/language-specs/testfiles.sh: added a fortran file.
	* gtksourceview/language-specs/kate.xml: nicer def:constant color.

2008-01-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceprintcompositor.c: count from 1 when deciding
	which lines should have a number.

2008-01-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/Makefile.am: remove leftover var

2008-01-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/forth.lang: new lang file,
	for Forth programming language, by Jens-Hanno Schwalm (#504730).
	* gtksourceview/language-specs/Makefile.am:
	* gtksourceview/language-specs/testfiles.sh:
	added it.

2008-01-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview/gtksourceprintcompositor.c: fix a couple of
	typos in docs.

2008-01-17  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/fortran.lang: added comment
	property, patch by rsachetto@gmail.com (#510032).
	* gtksourceview/language-specs/docbook.lang: removed obsolete
	dtd line.

=== gtksourceview 2.1.0 ===

2008-01-14  Paolo Maggi  <paolo@gnome.org>

	Added new gtk-print based printing API.

	* docs/reference/gtksourceview-2.0-sections.txt: updated
	* docs/reference/gtksourceview-2.0.types: updated
	* docs/reference/gtksourceview-docs.sgml: updated
	* docs/reference/tmpl/printjob.sgml: removed
	* docs/reference/tmpl/printcompositor.sgml: new file
	* gtksourceview/gtksourceprintcompositor.c: new file