@@ -89,8 +89,7 @@
   <style name="latex:command"               foreground="#2E8B57" bold="true"/>
   <style name="latex:include"               use-style="def:preprocessor"/>
 
-  <style name="sh:variable1"                foreground="#6A5ACD"/>
-  <style name="sh:variable2"                foreground="#008B8B"/>
+  <style name="sh:variable"                 foreground="#6A5ACD"/>
 
   <!-- legacy styles for old lang files -->
   <style name="Others"                      foreground="#2E8B57" bold="true"/>
