@@ -110,7 +110,7 @@
   <style name="latex:command"               foreground="chameleon3" bold="true"/>
   <style name="latex:include"               use-style="def:preprocessor"/>
 
-  <style name="sh:variable1"                foreground="plum3"/>
-  <style name="sh:variable2"                foreground="chameleon3"/>
+  <style name="sh:variable"                 foreground="plum3"/>
+  <style name="sh:variable-definition"      foreground="chameleon3"/>
 
 </style-scheme>
